--- a/Mobile Development/app/src/main/res/layout/fragment_book.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_book.xml
@@ -31,10 +31,13 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cv_slider_mainActivity"
+                style="@style/imageCardView"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:layout_alignParentTop="true"
+                app:cardBackgroundColor="@android:color/transparent"
                 app:cardCornerRadius="10dp"
+                app:cardElevation="0dp"
                 tools:ignore="MissingConstraints">
 
                 <ImageView
