--- a/Mobile Development/app/src/main/res/values/themes.xml
+++ b/Mobile Development/app/src/main/res/values/themes.xml
@@ -1,13 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.LiteraSearchApp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="homeAsUpIndicator">@drawable/ic_baseline_back_24</item>
     </style>
 
     <style name="Theme.LiteraSearchApp" parent="Base.Theme.LiteraSearchApp" />
 
     <style name="BottomNavigationView" parent="Widget.Design.BottomNavigationView">
         <item name="itemBackground">@color/green</item>
+        <item name="fontFamily">@font/poppins_regular</item>
     </style>
 </resources>
