create & update layout

--- a/Mobile Development/app/src/main/res/layout/fragment_forgot_password.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_forgot_password.xml
@@ -26,6 +26,7 @@
             android:layout_marginEnd="30dp"
             android:fontFamily="@font/poppins_regular"
             android:inputType="textEmailAddress"
+            android:hint="Masukkan Email"
             android:paddingStart="50dp"
             android:textSize="14sp" />
     </com.google.android.material.textfield.TextInputLayout>
