--- a/Mobile Development/app/src/main/res/layout/item_book.xml
+++ b/Mobile Development/app/src/main/res/layout/item_book.xml
@@ -14,15 +14,15 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/card_img"
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="10dp">
+        card_view:cardCornerRadius="10dp"
+        tools:ignore="MissingConstraints">
 
         <ImageView
             android:id="@+id/img_item_photo"
-            android:layout_width="170dp"
-            android:layout_height="200dp"
+            android:layout_width="150dp"
+            android:layout_height="250dp"
             android:scaleType="centerCrop"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
