--- a/Mobile Development/app/src/main/res/layout/fragment_book.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_book.xml
@@ -65,9 +65,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:scrollbars="horizontal"
+                android:scrollbarSize="0dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView11" />
+                app:layout_constraintTop_toBottomOf="@+id/textView11"
+
+                tools:listitem="@layout/item_book"
+                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:orientation="horizontal"/>
 
             <TextView
                 android:id="@+id/textView14"
@@ -87,7 +92,13 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView14">
+                app:layout_constraintTop_toBottomOf="@+id/textView14"
+                android:scrollbars="horizontal"
+                android:scrollbarSize="0dp"
+
+                tools:listitem="@layout/item_book"
+                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:orientation="horizontal">
 
             </androidx.recyclerview.widget.RecyclerView>
 
@@ -109,7 +120,12 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textView16" />
+                app:layout_constraintTop_toBottomOf="@id/textView16"
+
+                tools:listitem="@layout/item_book"
+                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                tools:orientation="vertical"
+                tools:spanCount="3"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
