--- a/Mobile Development/app/src/main/res/layout/fragment_library.xml
+++ b/Mobile Development/app/src/main/res/layout/fragment_library.xml
@@ -40,7 +40,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cardView" />
+                app:layout_constraintTop_toBottomOf="@+id/cardView"
+                tools:listitem="@layout/item_library" />
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
